manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  labels:
    app: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: hashicorp/http-echo
        ports:
        - containerPort: 5678
        resources:
          requests:
            memory: 64Mi
            cpu: 250m
          limits:
            memory: 200Mi
            cpu: 500m
